[package]
name = "Hacksaw"
version = "0.2.0"
edition = "2021"
authors = ["Liam Weeks"]
owners = ["Liam Weeks"]
description = "This is a text editor based in your terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
num = "0.1.42"
unicode-segmentation = "1"